...

    },
    "condiment" : {
      "comment" : "Display name for a condiment meal type.",
      "isCommentAutoGenerated" : true
    },
    "Confirm Password" : {

    },
    "Cooking" : {
      "comment" : "The category of the app.",
      "isCommentAutoGenerated" : true
    },
...
      "comment" : "Display name for a dip.",
      "isCommentAutoGenerated" : true
    },
    "Don't have an account?" : {

    },
    "Done" : {

    },
    "drink" : {
      "comment" : "Meal type for a drink.",
      "isCommentAutoGenerated" : true
    },
...
      "isCommentAutoGenerated" : true
    },
    "Easy" : {
      "comment" : "The name of the app.",
      "isCommentAutoGenerated" : true
    },
    "Email" : {

    },
    "Email updated successfully!" : {

    },
    "Email verified successfully!" : {
...
      "comment" : "A cuisine that is English.",
      "isCommentAutoGenerated" : true
    },
    "Equipment" : {

    },
    "Error" : {

    },
    "Error: %@" : {

    },
    "Error: %@ is required" : {

    },
    "Error: Calories must be ≤ 2000" : {

    },
    "Error: Invalid email" : {

    },
    "Error: Max calories cannot exceed min calories" : {

    },
    "Error: Password must be at least 8 characters long" : {

    },
    "Error: Passwords do not match" : {

    },
    "European" : {
      "comment" : "The European cuisine.",
      "isCommentAutoGenerated" : true
    },
...
    "Fluffing some rice... 🍚" : {

    },
    "food" : {

    },
    "Forgot password?" : {

    },
    "French" : {
      "comment" : "French cuisine.",
      "isCommentAutoGenerated" : true
    },
...
            "state" : "new",
            "value" : "Here is the definition of %1$@: %2$@"
          }
        }
      }
    },
    "Hide password" : {

    },
    "Home" : {

    },
    "hor d'oeuvre" : {
...
      "isCommentAutoGenerated" : true
    },
    "Linked Accounts" : {
      "comment" : "Title of a section in the profile view that lists any linked social media accounts.",
      "isCommentAutoGenerated" : true
    },
    "Login" : {

    },
    "Logout" : {

    },
    "Look up the definition of a cooking-related term" : {
...
      "comment" : "A cuisine that is part of the Nordic cuisine group.",
      "isCommentAutoGenerated" : true
    },
    "Nutrition Facts" : {

    },
    "OK" : {

    },
    "Open Recipe" : {
      "comment" : "Title of the intent to open a recipe.",
      "isCommentAutoGenerated" : true
    },
    "Open recipe source" : {

    },
    "Open recipe: ${target}" : {

    },
    "Or sign in using:" : {
      "comment" : "Text displayed in the \"Sign In\" view, explaining that users can sign in using their social media accounts.",
      "isCommentAutoGenerated" : true
    },
    "Passkey created successfully" : {
      "comment" : "Confirmation message displayed when a passkey is successfully created.",
      "isCommentAutoGenerated" : true
...
      "isCommentAutoGenerated" : true
    },
    "Passkeys" : {
      "comment" : "Title for the passkeys section in the user profile view.",
      "isCommentAutoGenerated" : true
    },
    "Password" : {

    },
    "Password must be at least 8 characters long" : {

    },
    "Password updated successfully!" : {

    },
    "Please sign in again." : {
...

    },
    "Recipes" : {
      "comment" : "Title of the search recipes intent.",
      "isCommentAutoGenerated" : true
    },
    "Remember Me" : {
      "comment" : "Label for a checkbox that allows users to remember their login credentials.",
      "isCommentAutoGenerated" : true
    },
    "Rename passkey" : {
      "comment" : "Button label to rename a passkey.",
      "isCommentAutoGenerated" : true
...
    "Share this recipe" : {

    },
    "Show Me Another Recipe!" : {

    },
    "Show password" : {

    },
    "side dish" : {
      "comment" : "Display name for the side dish meal type.",
      "isCommentAutoGenerated" : true
    },
    "Sign In" : {

    },
    "Sign in to view your saved recipes" : {

    },
    "Sign in with a passkey" : {
      "comment" : "Text for signing in with a passkey.",
      "isCommentAutoGenerated" : true
    },
    "Sign Up" : {

    },
    "Signed in successfully!" : {

    },
    "Signed out successfully!" : {
...
    "Steaming veggies... 🥗" : {

    },
    "Steps" : {

    },
    "Submit" : {

    },
    "Successfully linked %@!" : {
      "comment" : "A message displayed when a user successfully links their account to a third-party provider. The argument is the name of the provider.",
      "isCommentAutoGenerated" : true
    },
...
      "isCommentAutoGenerated" : true
    },
    "Unlink" : {
      "comment" : "Button text to unlink a linked account.",
      "isCommentAutoGenerated" : true
    },
    "Username" : {

    },
    "Username is required to sign in with a passkey" : {
      "comment" : "Hint text that appears below the \"Sign in with a passkey\" button in the \"Profile\" view, explaining that a username is required to sign in with a passkey.",
      "isCommentAutoGenerated" : true
    },
    "Vegan" : {

    },
...
